added java25 block